--- a/www/edit.html
+++ b/www/edit.html
@@ -496,7 +496,10 @@
     }
     GlobalState.prototype.compile_algorithm = function () {
         iframe = document.getElementById("preview_iframe");
-        iframe.contentWindow.postMessage(JSON.stringify({ proto: this.get_ui_algorithm() }), '*');
+        if(iframe) 
+            iframe.contentWindow.postMessage(JSON.stringify({ proto: this.get_ui_algorithm() }), '*');
+        else
+            setTimeout(function(){this.compile_algorithm}.bind(this), 250);
     }
     window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
         mode: "xml",
