--- a/www/edit.html
+++ b/www/edit.html
@@ -16,7 +16,7 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px; border: 1px solid #fff !important;">
 
-                        <iframe sandbox="allow-scripts" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+                        <iframe onload="console.log(this);" sandbox="allow-scripts" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
                             src="canvas.html" id="preview_iframe"></iframe>
                     </div>
                 </div>
