--- a/www/edit.html
+++ b/www/edit.html
@@ -16,7 +16,7 @@
                     <div class="col-12 col-sm-12 col-md-12 col-lg-12"
                         style="height:512px; border: 1px solid #fff !important;">
 
-                        <iframe onload="state.compile_algorithm()" sandbox="allow-scripts" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+                        <iframe onload="state.iframe_loaded()" sandbox="allow-scripts" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
                             src="canvas.html" id="preview_iframe"></iframe>
                     </div>
                 </div>
@@ -494,13 +494,17 @@
         else
             $("#algorithm_javascript").hide();
     }
+    GlobalState.prototype.iframe_loaded = function () {
+        iframe = document.getElementById("preview_iframe");
+        iframe.contentWindow.postMessage(JSON.stringify({ proto: default_create_algorithm }), '*');
+    }
     GlobalState.prototype.compile_algorithm = function () {
         iframe = document.getElementById("preview_iframe");
         ui_algorithm = this.get_ui_algorithm();
         if(iframe) 
             iframe.contentWindow.postMessage(JSON.stringify({ proto: ui_algorithm }), '*');
         else
-            setTimeout(function(){this.compile_algorithm}.bind(this), 250);
+            console.log("Error! No iframe loaded.");
     }
     window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
         mode: "xml",
