--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
 <body>
     <div id="menu" class="topnav" style="display:hidden;">
-        <a id="home_button" href="#home">Home</a>
+        <a id="home_button" href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.show_page(pages.BROWSE); ">Browse</a>
         <a id="edit_button" onclick="state.show_page(pages.EDIT); ">Edit</a>
         <a id="create_button" onclick="state.show_page(pages.CREATE); ">Create</a>
