--- a/www/request.html
+++ b/www/request.html
@@ -1,9 +1,9 @@
 <div class="row connected_content"
-    style="margin: 0px !important; z-index: 225; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0.0, 0.0, 0.0, 0.0);"
-    id="request">
+    style="margin: 0px !important; z-index: 20; position:absolute; text-align:center; border:none !important; height:100%; width:100%;  overflow-y: auto; background-color: rgba(0,0,0,.75);"
+    id="reset">
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
-    <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+    <form class="col-12 col-sm-12 col-md-10 col-lg-8">
         <br>
         <h1 style="text-align:center; color:#0f0; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;"
             class="blink-white">
@@ -47,7 +47,7 @@
             </div>
             <br>
         </h1>
-    </div>
+    </form>
     <div class="col-0 col-sm-0 col-md-1 col-lg-2">
     </div>
 </div>
