--- a/www/reset.html
+++ b/www/reset.html
@@ -113,6 +113,24 @@
             }
         }).finish())
     }
+    
+    function removeURLParameter(url, parameter) {
+        var urlparts = url.split('?');   
+        if (urlparts.length >= 2) {
+
+            var prefix = encodeURIComponent(parameter) + '=';
+            var pars = urlparts[1].split(/[&;]/g);
+
+            for (var i = pars.length; i-- > 0;) {    
+                if (pars[i].lastIndexOf(prefix, 0) !== -1) {  
+                    pars.splice(i, 1);
+                }
+            }
+
+            return urlparts[0] + (pars.length > 0 ? '?' + pars.join('&') : '');
+        }
+        return url;
+    }
 
     if (user_query_param && code_query_param) {
         state.user_name = user_query_param;
@@ -132,6 +150,6 @@
             }
         }).finish())
         routed = true;
-        window.location.search = "";
+        window.history.replaceState({}, document.title, removeURLParameter(removeURLParameter(window.location.href, "user"), "code"));
     }
 </script>
