--- a/www/index.html
+++ b/www/index.html
@@ -210,7 +210,7 @@
 
         GlobalState.prototype.post_connect_load = function () {
             this.show_logged_out_content();
-            this.hide_popovers(pages.PROCESSING);
+            this.hide_popover(pages.PROCESSING);
             $(".belownav").fadeIn(1000.);
             $("#menu").fadeIn(1000.);
             if(window.location.hash == pages.RECONNECT)
@@ -319,7 +319,7 @@
                 //this.user_password = proto.auth.password;
                 this.hash = proto.auth.hash;
                 this.logged_in = true;
-                this.hide_popovers(pages.PROCESSING);
+                this.hide_popover(pages.PROCESSING);
                 this.show_page(pages.HOME);
             }
             if (proto.type == Message.Type.AUTH) {
