--- a/www/index.html
+++ b/www/index.html
@@ -332,10 +332,9 @@
                 this.show_page(pages.PROCESSING, proto.message, proto.details, false, true);
             }
             else if (proto.type == Message.Type.PROGRESS) {
-                if (this.deleting_algorithm) {
-                    this.deleting_algorithm = false;
-                    return;
-                }
+                this.show_page(pages.PROCESSING, proto.message, proto.details, true, true);
+            }
+            else if (proto.type == Message.Type.DELETE_ACCOUNT) {
                 this.show_page(pages.PROCESSING, proto.message, proto.details, true, true);
             }
             else if (proto.type == Message.Type.DELETE_ALGORITHM) {
