--- a/www/index.html
+++ b/www/index.html
@@ -641,7 +641,7 @@
                         opt_out : opt_out, 
                         should_show_page : should_show_page, 
                         is_back_action : is_back_action,
-                        completion_callback = completion_callback
+                        completion_callback: completion_callback
                     });
                 });
             }
@@ -689,7 +689,7 @@
                         opt_out : opt_out, 
                         should_show_page : should_show_page, 
                         is_back_action : is_back_action,
-                        completion_callback = completion_callback
+                        completion_callback: completion_callback
                     });
                 });
             }
@@ -736,7 +736,7 @@
                         opt_out : opt_out, 
                         should_show_page : should_show_page, 
                         is_back_action : is_back_action,
-                        completion_callback = completion_callback
+                        completion_callback: completion_callback
                     });
                 });
             }
