--- a/www/index.html
+++ b/www/index.html
@@ -372,19 +372,19 @@
             switch (page) {
                 case pages.RECONNECT:
                     $("#menu").fadeOut(1000);
-                    $("#belownav").fadeOut(1000);
+                    $(".belownav").fadeOut(1000);
                     break;
                 case pages.PROCESSING:
                     $("#menu").fadeOut(1000.);
-                    $("#belownav").fadeOut(1000);
+                    $(".belownav").fadeOut(1000);
                     break;
                 case pages.CLIENT_ERROR:
                     $("#menu").fadeOut(1000.);
-                    $("#belownav").fadeOut(1000);
+                    $(".belownav").fadeOut(1000);
                     break;
                 case pages.SERVER_ERROR:
                     $("#menu").fadeOut(1000.);
-                    $("#belownav").fadeOut(1000);
+                    $(".belownav").fadeOut(1000);
                     break;
                 case pages.RESET:
                     this.refresh_captchas();
