--- a/www/index.html
+++ b/www/index.html
@@ -761,6 +761,17 @@
             }
         }
 
+        GlobalState.prototype.popover_callback = function (identifier_index) {
+            var page = "#popover"+identifier_index;
+            for(var i = 0; i < this.popovers.length; i++)
+            {
+                if(this.popovers[i].page == page)
+                {
+                    this.popover_callback(this.popovers[i]);
+                }
+            }
+        }
+
         GlobalState.prototype.hide_popovers = function () {
 
             for(var i = 0; i < this.popovers.length; i++)
